--- a/5121295/index.html
+++ b/5121295/index.html
@@ -199,11 +199,12 @@ Her name is the song that time wll admire.
       <!-- OUTRO -->
       <div id="outroControls">
         <div id="outroSymbol" aria-label="Tap to close the whisper" role="button"></div>
-        <div id="outroHint">— With love, Flick and Ada —</div>
+        <div id="outroHint"></div>
       </div>
 
-      <div id="outroQuote">The battles we never ask for can still forge the strongest parts of us.<br>
-        And though legends may begin with nicknames and laughter, they live on in the love we leave blazing behind us.</em></div>
+      <div id="outroQuote"><pr>The battles we never ask for can still forge the strongest parts of us.<br>
+        And though legends may begin with nicknames and laughter, they live on in the love we leave blazing behind us.</em><br><br>
+      — With love, Flick and Ada —</div>
     </div>
   </main>
 
