--- a/5121295/index.html
+++ b/5121295/index.html
@@ -202,7 +202,7 @@ Her name is the song that time wll admire.
         <div id="outroHint"></div>
       </div>
 
-      <div id="outroQuote"><pr>The battles we never ask for can still forge the strongest parts of us.<br>
+      <div id="outroQuote"><em>The battles we never ask for can still forge the strongest parts of us.<br>
         And though legends may begin with nicknames and laughter, they live on in the love we leave blazing behind us.</em><br><br>
       — With love, Flick and Ada —</div>
     </div>
@@ -213,7 +213,7 @@ Her name is the song that time wll admire.
     <source src="ellie-intro.mp3" type="audio/mpeg">
   </audio>
   <audio id="outroAudio" preload="auto" playsinline>
-    <source src="ellie-outro.mp3" type="audio/mpeg">
+    <source src="ellie-outro_v2.mp3" type="audio/mpeg">
   </audio>
 
   <script>
@@ -285,17 +285,26 @@ Her name is the song that time wll admire.
 
   // Outro: pause intro audio, play outro, and fade in glowing quote
   if (outroSymbol) {
-    outroSymbol.addEventListener('click', () => {
+    outroSymbol.addEventListener('click', async () => {
       try { if (storyAudio && !storyAudio.paused) storyAudio.pause(); } catch(e){}
       try {
         if (outroAudio) {
+        try {
+          // make Safari/iOS happy
+          outroAudio.muted = false;
+          outroAudio.volume = 1.0;
+          // force a fresh load in case the <source> was cached weirdly
+          outroAudio.load();
           outroAudio.currentTime = 0;
-          const p2 = outroAudio.play();
-          if (p2 && typeof p2.catch === 'function') p2.catch(()=>{});
+          await outroAudio.play();
+          console.log('Outro playing');
+        } catch (e) {
+          console.error('Audio play failed:', e);
+          alert('Audio failed: ' + e.message);
         }
-      } catch(e){}
+      }
+
       if (outroQuote) {
-        // small delay so audio click registers, then fade in quote
         setTimeout(() => { outroQuote.style.opacity = 1; }, 2500);
       }
     });
@@ -307,8 +316,8 @@ Her name is the song that time wll admire.
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
       // make sure service-worker.js sits next to index.html in /5121295/
-      navigator.serviceWorker.register('./service-worker.js', { scope: '/5121295/' })
-        .catch(()=>{ /* shrug */ });
+      navigator.serviceWorker.register('./service-worker.js', { scope: '/' })
+        .catch(()=>{ /* swallow */ });
     });
   }
 </script>
